# ai-music-tools

./: .gitignore  Krya AI Tools.lnk  README.md  alembic.ini  copy-model.sh  launcher.bat  main.py  pyproject.toml  startup.sh
migrations/: env.py
migrations/versions/: c95f6098054a_init.py
src/: api.py  cli.py  constants.py
src/app/: dtos.py  models.py  router.py  service.py
src/app/cli/: __init__.py  main.py
src/app/cli/commands/: initialize.py
src/app/cli/commands/server/: __init__.py  main.py
src/app/cli/commands/tts/: main.py
src/app/tracks/: dtos.py  model.py  router.py  service.py
src/app/tracks/jobs/: dtos.py  model.py  routes.py  service.py
src/app/workers/: main.py  track_processor.py
src/core/: database.py  dependencies.py  queue.py  repository.py  setup.py
src/providers/: audiocraft.py  base.py
src/providers/audiocraft/: __init__.py  cli.py  dtos.py  service.py
src/providers/audiocraft/commands/: __init__.py  main.py  music_gen.py
src/utils/: decorators.py  file.py  shell.py
src/utils/transformers/: __init__.py  progress.py
ui/: README.md  package-lock.json  package.json  tsconfig.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/track/[id]/: page.tsx
ui/src/components/: audio-player.tsx  categories-panel.tsx  generated-tracks.tsx  generation-form.tsx  header.tsx  main-content.tsx  progress-tracker.tsx  track-item.tsx
ui/src/components/ui/: progress.tsx
ui/src/lib/: types.ts
ui/src/stores/: store-provider.tsx  track-store.ts
