[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-music-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "audiocraft",
    "audioldm",
    "tts>=0.22.0",
    "click>=8.0.0",
]

[project.scripts]
audio = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
audioldm = { git = "https://github.com/haoheliu/AudioLDM.git" }
audiocraft = { git = "https://github.com/facebookresearch/audiocraft.git" }
