[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-music-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "audioldm",
    "tts>=0.22.0",
    "click>=8.0.0",
    "transformers>=4.57.5",
    "torch==2.6",
    "tqdm>=4.67.1",
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "sqlmodel>=0.0.31",
    "aiosqlite>=0.22.1",
    "litequeue>=0.9",
    "numpy>=1.26.4",
    "accelerate>=1.12.0",
]

[project.scripts]
krya = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
audioldm = { git = "https://github.com/haoheliu/AudioLDM.git" }
